--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     <h1 class="Line2">I build things for the web. </h1>
                 </div>
                 <div class="buildWeb">
-                    <h3 class="aboutFront"><span class="introD"></span>Passionate Frontend Engineer with 3+ years of
+                    <h3 class="aboutFront"><span class="introD">Passionate Frontend Engineer with 3+ years of
                         experience in building high-performance, scalable, and user-friendly web applications. Currently
                         at Tiket.com, where <span style="color:  #ff5200;">I’ve played a key role in revamping travel
                             booking experiences, optimizing
