--- a/index.html
+++ b/index.html
@@ -117,29 +117,37 @@
                     <h1 class="Line2">I build things for the web. </h1>
                 </div>
                 <div class="buildWeb">
-                    <h3 class="aboutFront"><span class="introD">Passionate Frontend Engineer with 3+ years of
-                        experience in building high-performance, scalable, and user-friendly web applications. Currently
-                        at Tiket.com, where <span style="color:  #ff5200;">I’ve played a key role in revamping travel
-                            booking experiences, optimizing
-                            UI for 29% faster load times, and implementing A/B testing & conversion-driven design to
-                            enhance
-                            engagement.</span><br>
-                        I specialize in <span style="color:  #ff5200;">React.js, Next.js, SSR, CSR, and CDN
-                            optimizations, ensuring fast, responsive,
-                            and accessible</span> user experiences across devices. My work has led to a 70% reduction in
-                        bugs and
-                        improved overall platform reliability. Recognized for meeting deadlines, optimizing performance,
-                        and driving impactful UI transformations, I thrive in fast-paced environments.<br>
-                        I’m always out there to take on new challenges where I can apply my expertise in UI/UX,
-                        performance tuning, and scalable architecture—leveraging my skills to build next-gen web
-                        experiences. If you're looking for someone who loves crafting seamless, high-impact frontend
-                        solutions, let's connect!</span></h3>
-                    <!-- <h3 class="aboutFront"> <span class="introD"> I'm an upcoming software engineer.I fell in love with
-                            <span style="color:  #ff5200;">programming</span> and I have learnt many things till that
-                            fall into the areas of my Interest. <br> My current focus is on <span
-                                style="color:  #ff5200;"> Competitive Programming </span> and <span
-                                style="color:  #ff5200;">Full Stack Web Development</span></span>
-                    </h3> -->
+                    <!-- <h3 class="aboutFront"><span class="introD">Passionate Frontend Engineer with 3+ years of
+                            experience in building high-performance, scalable, and user-friendly web applications.
+                            Currently
+                            at Tiket.com, where <span style="color:  #ff5200;">I’ve played a key role in revamping
+                                travel
+                                booking experiences, optimizing
+                                UI for 29% faster load times, and implementing A/B testing & conversion-driven design to
+                                enhance
+                                engagement.</span><br>
+                            I specialize in <span style="color:  #ff5200;">React.js, Next.js, SSR, CSR, and CDN
+                                optimizations, ensuring fast, responsive,
+                                and accessible</span> user experiences across devices. My work has led to a 70%
+                            reduction in
+                            bugs and
+                            improved overall platform reliability. Recognized for meeting deadlines, optimizing
+                            performance,
+                            and driving impactful UI transformations, I thrive in fast-paced environments.<br>
+                            I’m always out there to take on new challenges where I can apply my expertise in UI/UX,
+                            performance tuning, and scalable architecture—leveraging my skills to build next-gen web
+                            experiences. If you're looking for someone who loves crafting seamless, high-impact frontend
+                            solutions, let's connect!</span></h3> -->
+
+                    <h3 class="aboutFront"> <span class="introD">I am a Software Engineer specializing in Frontend
+                            Technologies, passionate about building scalable,
+                            high-performance web applications. I thrive on solving
+                            <span style="color:  #ff5200;">complex problems, optimizing user
+                                experiences,</span> and <br><span style="color:  #ff5200;"> creating intuitive, visually
+                                appealing interfaces. </span> With a strong focus on detail
+                            and efficiency, I enjoy collaborating with teams to deliver seamless and impactful digital
+                            solutions.</span>
+                    </h3>
                 </div>
                 <a class="VNN" href="mailto: shikharchauhan07@gmail.com"><button style="margin-top: 40px;"
                         class="Abutton btn-l-r btn-color mail" type="button" name="button">Get In Touch</button></a>
