--- a/index.html
+++ b/index.html
@@ -117,27 +117,7 @@
                     <h1 class="Line2">I build things for the web. </h1>
                 </div>
                 <div class="buildWeb">
-                    <!-- <h3 class="aboutFront"><span class="introD">Passionate Frontend Engineer with 3+ years of
-                            experience in building high-performance, scalable, and user-friendly web applications.
-                            Currently
-                            at Tiket.com, where <span style="color:  #ff5200;">I’ve played a key role in revamping
-                                travel
-                                booking experiences, optimizing
-                                UI for 29% faster load times, and implementing A/B testing & conversion-driven design to
-                                enhance
-                                engagement.</span><br>
-                            I specialize in <span style="color:  #ff5200;">React.js, Next.js, SSR, CSR, and CDN
-                                optimizations, ensuring fast, responsive,
-                                and accessible</span> user experiences across devices. My work has led to a 70%
-                            reduction in
-                            bugs and
-                            improved overall platform reliability. Recognized for meeting deadlines, optimizing
-                            performance,
-                            and driving impactful UI transformations, I thrive in fast-paced environments.<br>
-                            I’m always out there to take on new challenges where I can apply my expertise in UI/UX,
-                            performance tuning, and scalable architecture—leveraging my skills to build next-gen web
-                            experiences. If you're looking for someone who loves crafting seamless, high-impact frontend
-                            solutions, let's connect!</span></h3> -->
+
 
                     <h3 class="aboutFront"> <span class="introD">I am a Software Engineer specializing in Frontend
                             Technologies, passionate about building scalable,
@@ -149,8 +129,9 @@
                             solutions.</span>
                     </h3>
                 </div>
-                <a class="VNN" href="mailto: shikharchauhan07@gmail.com"><button style="margin-top: 40px;"
-                        class="Abutton btn-l-r btn-color mail" type="button" name="button">Get In Touch</button></a>
+                <a class="VNN" href="mailto: shikharchauhan07@gmail.com"><button
+                        style="margin-top: 40px; transition: all 0.6s ease-out" class="Abutton btn-l-r btn-color mail"
+                        type="button" name="button">Get In Touch</button></a>
 
             </div>
         </div>
@@ -161,7 +142,29 @@
             <div style=" width: 85%;margin:0 auto;">
                 <h2 style="font-size: 30px; font-weight: bold;" id="Aboutt"> <span
                         style="font-size: 30px; color: #ff5200;">01. </span> About Me</h2>
-                <p class="aboutFront" style=" color: rgba(240, 248, 255, 0.623); font-size: 18px; font-weight: 300;">Hi
+                <p class="aboutFront" style=" color: rgba(240, 248, 255, 0.623); font-size: 18px; font-weight: 300;">
+                    Passionate Frontend Engineer with 3+ years of
+                    experience in building high-performance, scalable, and user-friendly web applications.
+                    Currently
+                    at Tiket.com, where <span style="color:  #ff5200;">I’ve played a key role in revamping
+                        travel
+                        booking experiences, optimizing
+                        UI for 29% faster load times, and implementing A/B testing & conversion-driven design to
+                        enhance
+                        engagement.</span><br>
+                    I specialize in <span style="color:  #ff5200;">React.js, Next.js, SSR, CSR, and CDN
+                        optimizations, ensuring fast, responsive,
+                        and accessible</span> user experiences across devices. My work has led to a 70%
+                    reduction in
+                    bugs and
+                    improved overall platform reliability. Recognized for meeting deadlines, optimizing
+                    performance,
+                    and driving impactful UI transformations, I thrive in fast-paced environments.<br>
+                    I’m always out there to take on new challenges where I can apply my expertise in UI/UX,
+                    performance tuning, and scalable architecture—leveraging my skills to build next-gen web
+                    experiences. If you're looking for someone who loves crafting seamless, high-impact frontend
+                    solutions, let's connect!</p>
+                <!-- <p class="aboutFront" style=" color: rgba(240, 248, 255, 0.623); font-size: 18px; font-weight: 300;">Hi
                     Everyone, I am
                     <span style="color:  #ff5200;">Shikhar Chauhan</span>
                     <br> I'm an upcoming software engineer pursuing B.Tech from
@@ -170,7 +173,7 @@
                     watching my web-pages shrink into mobile screens and still look amazing. So far I'm a full stack
                     web-developer and trying my hands
                     on Competitive Programming. <br> Apart from coding, some other activities that I love to do! <br>
-                </p>
+                </p> -->
 
                 <ul>
                     <li class="about-activity">
