--- a/index.html
+++ b/index.html
@@ -146,34 +146,29 @@
                     Passionate Frontend Engineer with 3+ years of
                     experience in building high-performance, scalable, and user-friendly web applications.
                     Currently
-                    at Tiket.com, where <span style="color:  #ff5200;">I’ve played a key role in revamping
-                        travel
-                        booking experiences, optimizing
-                        UI for 29% faster load times, and implementing A/B testing & conversion-driven design to
+                    at Tiket.com, where I’ve played a key role in revamping
+                    travel
+                    booking experiences, <span style="color:  #ff5200;">optimizing
+                        UI for 29% faster load times</span>, and implementing A/B testing & <span
+                        style="color:  #ff5200;">conversion-driven design to
                         enhance
                         engagement.</span><br>
                     I specialize in <span style="color:  #ff5200;">React.js, Next.js, SSR, CSR, and CDN
-                        optimizations, ensuring fast, responsive,
-                        and accessible</span> user experiences across devices. My work has led to a 70%
-                    reduction in
-                    bugs and
+                        optimizations</span>, ensuring fast, responsive,
+                    and accessible user experiences across devices. My work has led to a <span
+                        style="color:  #ff5200;">70%
+                        reduction in
+                        bugs</span> and
                     improved overall platform reliability. Recognized for meeting deadlines, optimizing
                     performance,
                     and driving impactful UI transformations, I thrive in fast-paced environments.<br>
-                    I’m always out there to take on new challenges where I can apply my expertise in UI/UX,
+                    I’m always out there to take on new challenges where I can apply my expertise in <span
+                        style="color:  #ff5200;">UI/UX</span>,
                     performance tuning, and scalable architecture—leveraging my skills to build next-gen web
-                    experiences. If you're looking for someone who loves crafting seamless, high-impact frontend
-                    solutions, let's connect!</p>
-                <!-- <p class="aboutFront" style=" color: rgba(240, 248, 255, 0.623); font-size: 18px; font-weight: 300;">Hi
-                    Everyone, I am
-                    <span style="color:  #ff5200;">Shikhar Chauhan</span>
-                    <br> I'm an upcoming software engineer pursuing B.Tech from
-                    <span style="color:  #ff5200;"> DIT University.</span>
-                    <br> I'm passionately interested in Web-development. I love applying responsive design concepts and
-                    watching my web-pages shrink into mobile screens and still look amazing. So far I'm a full stack
-                    web-developer and trying my hands
-                    on Competitive Programming. <br> Apart from coding, some other activities that I love to do! <br>
-                </p> -->
+                    experiences. If you're looking for someone who loves <span style="color:  #ff5200;"> seamless,
+                        high-impact frontend
+                        solutions</span>, let's connect!</p>
+
 
                 <ul>
                     <li class="about-activity">
