--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <a class="contactDiv23 grabbing" href="mailto:shikharchauhan07@gmail.com">shikharchauhan07@gmail.com</a>
 
         </div>
-        <div style=" position: absolute; left: 50%; border-left: 2px solid rgba(245, 245, 245, 0.61); height: 200px;">
+        <div style=" position: absolute; left: 50%; border-left: 2px solid rgba(245, 245, 245, 0.61); height: 200px;"><p>+91-9368312801</p>
         </div>
 
     </div>
