--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
                         style="margin-top: 20px; cursor: sw-resize;" class="fab fa fa-twitter "></i></i></a></li>
         </ul>
         <div style=" position: absolute; left: 50%; border-left: 2px solid rgba(245, 245, 245, 0.61); height: 100px;">
+            <p>+91-9368312801</p>
         </div>
 
     </div>
@@ -95,7 +96,7 @@
             <a class="contactDiv23 grabbing" href="mailto:shikharchauhan07@gmail.com">shikharchauhan07@gmail.com</a>
 
         </div>
-        <div style=" position: absolute; left: 50%; border-left: 2px solid rgba(245, 245, 245, 0.61); height: 200px;"><p>+91-9368312801</p>
+        <div style=" position: absolute; left: 50%; border-left: 2px solid rgba(245, 245, 245, 0.61); height: 200px;">
         </div>
 
     </div>
