--- a/index.html
+++ b/index.html
@@ -75,17 +75,19 @@
 
         <ul
             style="list-style-type: none;position: relative; text-align: center; padding-left: 0px;  cursor: sw-resize;">
-            <li><a class="contactIcon ; " href="https://github.com/Shikh007ar" target="_blank"><i
-                        style="margin-top: 20px; cursor: sw-resize;" class="fab  fa fa-github "></i></a></li>
+
             <li><a class="contactIcon" href="https://www.instagram.com/chauhan_shikhar.07/" target="_blank"><i
                         style="margin-top: 20px; cursor: sw-resize;" class="fab fa fa-instagram"></i></i></a></li>
-            <li><a class="contactIcon" href="https://www.linkedin.com/in/shikhar-chauhan-34a811198/" target="_blank"><i
-                        style="margin-top: 20px; cursor: sw-resize;" class="fab fa-linkedin fa "></i></i></a></li>
-            <li><a class="contactIcon" href="https://twitter.com/Shikhar32126822" target="_blank"><i
-                        style="margin-top: 20px; cursor: sw-resize;" class="fab fa fa-twitter "></i></i></a></li>
+            <li>
+                <a class="contactIcon" href="https://www.linkedin.com/in/shikhar-chauhan-34a811198/" target="_blank">
+                    <i style="margin-top: 20px; cursor: sw-resize;" class="fab fa-linkedin fa"></i>
+                </a>
+            </li>
+
+
         </ul>
         <div style=" position: absolute; left: 50%; border-left: 2px solid rgba(245, 245, 245, 0.61); height: 100px;">
-            <p>+91-9368312801</p>
+
         </div>
 
     </div>
