--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.11.0/devicon.min.css">
     <script src="https://kit.fontawesome.com/14bf636678.js" crossorigin="anonymous"></script>
-    
+
     <link rel="stylesheet" href="bootstrap-social.css">
     <link rel="stylesheet" href="style.css">
     <!-- <script src="/photo.js" type="text/javascript"></script> -->
@@ -76,12 +76,14 @@
 
         <ul
             style="list-style-type: none;position: relative; text-align: center; padding-left: 0px;  cursor: sw-resize;">
-
-            <li><a class="contactIcon" href="https://www.instagram.com/chauhan_shikhar.07/" target="_blank"><i
-                        style="margin-top: 20px; cursor: sw-resize;" class="fab fa fa-instagram"></i></i></a></li>
             <li>
                 <a class="contactIcon" href="https://www.linkedin.com/in/shikhar-chauhan-34a811198/" target="_blank">
                     <i style="margin-top: 20px; cursor: sw-resize;" class="fab fa-linkedin fa"></i>
+                </a>
+            </li>
+            <li>
+                <a class="contactIcon" href="tel:+91-9368312801" target="_blank">
+                    <i style="margin-top: 20px; cursor: sw-resize;" class="fa-solid fa-mobile"></i>
                 </a>
             </li>
 
