--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             </li>
             <li>
                 <a class="contactIcon" href="tel:+91-9368312801" target="_blank">
-                    <i style="margin-top: 20px; cursor: sw-resize;" class="fa-solid fa-mobile"></i>
+                    <i style="margin-top: 20px; cursor: sw-resize;" class="fa-solid fa-phone-volume"></i>
                 </a>
             </li>
 
