--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
             style="list-style-type: none;position: relative; text-align: center; padding-left: 0px;  cursor: sw-resize;">
             <li>
                 <a class="contactIcon" href="https://www.linkedin.com/in/shikhar-chauhan-34a811198/" target="_blank">
-                    <i style="margin-top: 20px; cursor: sw-resize;" class="fa-brands fa-linkedin"></i>
-                </a>
+                    <i style="margin-top: 20px; cursor: sw-resize;" class="fab fa-linkedin fa"></i>
+                </a> 
             </li>
             <li>
                 <a class="contactIcon" href="tel:+91-9368312801" target="_blank">
-                    <i style="margin-top: 20px; cursor: sw-resize;" class="fa-solid fa-square-phone"></i>
+                    <i style="margin-top: 20px; cursor: sw-resize;" class=" fab fa-solid fa-square-phone fa"></i>
                 </a>
             </li>
         </ul>
