--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             </li>
             <li>
                 <a class="contactIcon" href="tel:+91-9368312801" target="_blank">
-                    <i style="margin-top: 20px; cursor: sw-resize;" class=" fab fa-solid fa-square-phone fa"></i>
+                    <i style="margin-top: 20px; cursor: sw-resize;" class=" fab fa-solid fa-squarephone fa"></i>
                 </a>
             </li>
         </ul>
