--- a/index.html
+++ b/index.html
@@ -77,11 +77,12 @@
             <li>
                 <a class="contactIcon" href="https://www.linkedin.com/in/shikhar-chauhan-34a811198/" target="_blank">
                     <i style="margin-top: 20px; cursor: sw-resize;" class="fab fa-linkedin fa"></i>
-                </a> 
+                </a>
             </li>
+
             <li>
                 <a class="contactIcon" href="tel:+91-9368312801" target="_blank">
-                    <i style="margin-top: 20px; cursor: sw-resize;" class=" fab fa-solid fa-squarephone fa"></i>
+                    <i style="margin-top: 20px; cursor: sw-resize;" class="fas fa-phone"></i>
                 </a>
             </li>
         </ul>
