--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
             <li>
                 <a class="contactIcon" href="tel:+91-9368312801" target="_blank">
-                    <i style="margin-top: 20px; cursor: sw-resize;" class="fas fa-phone-square"></i>
+                    <i style="margin-top: 20px; cursor: sw-resize;" class="fas fa-phone"></i>
                 </a>
             </li>
         </ul>
