--- a/index.html
+++ b/index.html
@@ -74,14 +74,14 @@
     <div class="contactDiv1 ">
         <ul
             style="list-style-type: none;position: relative; text-align: center; padding-left: 0px;  cursor: sw-resize;">
-            <li class="contactIcon">
-                <a href="https://www.linkedin.com/in/shikhar-chauhan-34a811198/" target="_blank">
+            <li>
+                <a class="contactIcon" href="https://www.linkedin.com/in/shikhar-chauhan-34a811198/" target="_blank">
                     <i style="margin-top: 20px; cursor: sw-resize;" class="fab fa-linkedin fa"></i>
                 </a>
             </li>
 
-            <li class="contactIcon">
-                <a href="tel:+91-9368312801" target="_blank">
+            <li>
+                <a class="contactIcon" href="tel:+91-9368312801" target="_blank">
                     <i style="margin-top: 20px; cursor: sw-resize;" class="fas fa-phone"></i>
                 </a>
             </li>
