--- a/index.html
+++ b/index.html
@@ -257,6 +257,22 @@
 
                     <div class="row" style="text-align: center; padding-left: 77px; margin: 0 auto;">
 
+
+                        <div class="column ">
+                            <div>
+                                <div class="tech-icons ">
+                                    <i class="fa-brands fa-react "></i>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="column ">
+                            <div>
+                                <div class="tech-icons ">
+                                    <i class="fa-brands fa-docker"></i>
+                                </div>
+                            </div>
+                        </div>
                         <div class="column ">
                             <div>
                                 <div class="tech-icons ">
@@ -317,6 +333,13 @@
                             <div>
                                 <div class="tech-icons ">
                                     <i class="devicon-html5-plain actualLogo "></i>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="column ">
+                            <div>
+                                <div class="tech-icons ">
+                                    <i class="fa-brands fa-jenkins"></i>
                                 </div>
                             </div>
                         </div>
