--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="https://kit.fontawesome.com/14bf636678.js" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="bootstrap-social.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
     <!-- <script src="/photo.js" type="text/javascript"></script> -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
