--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                         <div class="column ">
                             <div>
                                 <div class="tech-icons ">
-                                    <i class="fa-brands fa-react "></i>
+                                    <i class="fa-brands fa-react actualLogo"></i>
                                 </div>
                             </div>
                         </div>
@@ -270,7 +270,7 @@
                         <div class="column ">
                             <div>
                                 <div class="tech-icons ">
-                                    <i class="fa-brands fa-docker"></i>
+                                    <i class="fa-brands fa-docker actualLogo"></i>
                                 </div>
                             </div>
                         </div>
@@ -340,7 +340,7 @@
                         <div class="column ">
                             <div>
                                 <div class="tech-icons ">
-                                    <i class="fa-brands fa-jenkins"></i>
+                                    <i class="fa-brands fa-jenkins actualLogo"></i>
                                 </div>
                             </div>
                         </div>
