--- a/index.html
+++ b/index.html
@@ -272,7 +272,35 @@
                         <div class="column ">
                             <div>
                                 <div class="tech-icons ">
+                                    <i class="devicon-redux-original actualLogo"></i>
+                                    <span class="icon-name">Rrdux</span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="column ">
+                            <div>
+                                <div class="tech-icons ">
+                                    <i class="devicon-sonarqube-original actualLogo"></i>
+                                    <span class="icon-name">SonarQube</span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="column ">
+                            <div>
+                                <div class="tech-icons ">
+                                    <i class="devicon-typescript-plain actualLogo"></i>
+                                    <span class="icon-name">TypeScript</span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="column ">
+                            <div>
+                                <div class="tech-icons ">
                                     <i class="fa-brands fa-docker actualLogo"></i>
+                                    <span class="icon-name">Docker</span>
                                 </div>
                             </div>
                         </div>
@@ -280,6 +308,7 @@
                             <div>
                                 <div class="tech-icons ">
                                     <i class="devicon-cplusplus-line actualLogo "></i>
+                                    <span class="icon-name">CPP</span>
                                 </div>
                             </div>
                         </div>
@@ -288,14 +317,18 @@
                             <div>
                                 <div class="tech-icons ">
                                     <i class="devicon-javascript-plain actualLogo "></i>
+                                    <span class="icon-name">Javascript</span>
                                 </div>
                             </div>
                         </div>
+
+
 
                         <div class="column ">
                             <div>
                                 <div class="tech-icons ">
                                     <i class="devicon-nodejs-plain-wordmark actualLogo "></i>
+                                    <span class="icon-name">NodeJs</span>
                                 </div>
                             </div>
                         </div>
@@ -303,7 +336,8 @@
                         <div class="column ">
                             <div>
                                 <div class="tech-icons ">
-                                    <i class="devicon-express-original-wordmark actualLogo "></i>
+                                    <i class="devicon-express-original actualLogo "></i>
+                                    <span class="icon-name">Express</span>
                                 </div>
                             </div>
                         </div>
@@ -312,6 +346,7 @@
                             <div>
                                 <div class="tech-icons ">
                                     <i class="devicon-mongodb-plain-wordmark actualLogo "></i>
+                                    <span class="icon-name">MongoDB</span>
                                 </div>
                             </div>
                         </div>
@@ -319,7 +354,8 @@
                         <div class="column ">
                             <div>
                                 <div class="tech-icons ">
-                                    <i class="devicon-github-original actualLogo "></i>
+                                    <i class="devicon-git-plain actualLogo "></i>
+                                    <span class="icon-name">Git</span>
                                 </div>
                             </div>
                         </div>
@@ -328,6 +364,7 @@
                             <div>
                                 <div class="tech-icons ">
                                     <i class="devicon-bootstrap-plain-wordmark actualLogo "></i>
+                                    <span class="icon-name">Bootstrap</span>
                                 </div>
                             </div>
                         </div>
@@ -336,6 +373,7 @@
                             <div>
                                 <div class="tech-icons ">
                                     <i class="devicon-html5-plain actualLogo "></i>
+                                    <span class="icon-name">HTML5</span>
                                 </div>
                             </div>
                         </div>
@@ -343,6 +381,7 @@
                             <div>
                                 <div class="tech-icons ">
                                     <i class="fa-brands fa-jenkins actualLogo"></i>
+                                    <span class="icon-name">Jenkins</span>
                                 </div>
                             </div>
                         </div>
@@ -351,6 +390,7 @@
                             <div>
                                 <div class="tech-icons ">
                                     <i class="devicon-npm-original-wordmark actualLogo "></i>
+                                    <span class="icon-name">NPM</span>
                                 </div>
                             </div>
                         </div>
@@ -513,15 +553,7 @@
                         </ul>
                     </div>
                 </div>
-
-
-
-
-
-
-
             </div>
-
         </div>
 
 
