--- a/index.html
+++ b/index.html
@@ -273,16 +273,7 @@
                             <div>
                                 <div class="tech-icons ">
                                     <i class="devicon-redux-original actualLogo"></i>
-                                    <span class="icon-name">Rrdux</span>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="column ">
-                            <div>
-                                <div class="tech-icons ">
-                                    <i class="devicon-sonarqube-original actualLogo"></i>
-                                    <span class="icon-name">SonarQube</span>
+                                    <span class="icon-name">Redux</span>
                                 </div>
                             </div>
                         </div>
