--- a/index.html
+++ b/index.html
@@ -61,10 +61,8 @@
                                 class="color">04.</span> Contact Me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id='Stop' href="./MyResume.html"><button class="Tbutton btn-l-r btn-color"
-                                type="button" name="button">Resume</button></a>
-
-
+                        <a class="nav-link" id='Stop' href="./ShikharFrontendResume.html"><button
+                                class="Tbutton btn-l-r btn-color" type="button" name="button">Resume</button></a>
                     </li>
                 </ul>
             </div>
