--- a/MyResume.html
+++ b/MyResume.html
@@ -8,7 +8,7 @@
     <!-- <iframe src="./resume/Resume.pdf" width="100%" height="100%">
     </iframe> -->
     <div>
-        <object data="./resume/MyResume.pdf" type="application/pdf" width="100%" height="100%"></object>
+        <object data="./resume/ShikharFrontendResume.pdf" type="application/pdf" width="100%" height="100%"></object>
     </div>
 </body>
 
