--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                     <h3 class="aboutFront"> <span class="introD">I am a Software Engineer specializing in Frontend
                             Technologies, passionate about building scalable,
                             high-performance web applications. I thrive on solving
-                            <span style="color:  #ff5200;">complex problems, optimizing user
+                            <span style="color:  #7DF9FF;">complex problems, optimizing user
                                 experiences,</span> and <br><span style="color:  #ff5200;"> creating intuitive, visually
                                 appealing interfaces. </span> With a strong focus on detail
                             and efficiency, I enjoy collaborating with teams to deliver seamless and impactful digital
